--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=Adafruit VEML7700 Library
-version=2.1.5
-author=Adafruit
-maintainer=Adafruit <info@adafruit.com>
-sentence=Arduino library for the VEML7700 sensors in the Adafruit shop
-paragraph=Arduino library for the VEML7700 sensors in the Adafruit shop
+name=IMEG VEML7700 Library
+version=1.0.0
+author=Adafruit, Sam Rall
+maintainer=Sam Rall
+sentence=Arduino library for the VEML7700 sensors with added functionality and calibration
+paragraph=Arduino library for the VEML7700 sensors with added functionality and calibration
 category=Sensors
-url=https://github.com/adafruit/Adafruit_VEML7700
+url=https://github.com/earp123/IMEG_VEML7700
 architectures=*
 depends=Adafruit BusIO, Adafruit SSD1306
